Closed
Bug 85802
Opened 25 years ago
Closed 25 years ago
Failed DNS lookup results in segfault
Categories
(Core :: Networking, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla0.9.2
People
(Reporter: ssmith, Assigned: gordon)
References
()
Details
(Keywords: crash, Whiteboard: r=gagan, sr=brendan, a=?)
Attachments
(2 files)
|
5.24 KB,
patch
|
Details | Diff | Splinter Review | |
|
4.90 KB,
patch
|
Details | Diff | Splinter Review |
Immediately after pulling in todays DNS fixes (06/13/2001 16:33 in bonsai),
attemping to access a non-existing site results in a segfault.
Comment 1•25 years ago
|
||
-> Networking
Assignee: asa → gordon
Component: Browser-General → Networking
QA Contact: doronr → benc
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P2
Target Milestone: --- → mozilla0.9.2
No, this was a harmless race condition that my last checkin made not so
harmless. I can fix this on Thursday.
i'm marking this mostfreq because it will be mostfreq w/in a 48 hours.
Keywords: mostfreq
I've tested the patch on Mac, Linux, and WindowsNT. Looking for reviewers.
the processing flag needs to be incremented and decremented since other threads
can be active in the same funtion at that time. with that change it seems ok.
r=gagan
| Assignee | ||
Comment 10•25 years ago
|
||
I have an sr=brendan as well.
Whiteboard: r=gagan, sr=brendan, a=?
Comment 11•25 years ago
|
||
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
| Assignee | ||
Comment 12•25 years ago
|
||
Patch checked in. Marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 13•25 years ago
|
||
*** Bug 86121 has been marked as a duplicate of this bug. ***
Comment 14•24 years ago
|
||
Verified on:
Win2K: 2001-07-27-00-0.9.2
2001-07-27-12-trunk
MacOS: 2001-07-26-21-0.9.2
Linux: 2001-07-26-23-0.9.2
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•