Fix for bug 85802 "Failed DNS lookup results in segfault". r=gagan, sr=brendan, a=asa.